Added store and delete routes for bus schedule
